force-app/main/default/objects/Candidate__c/Candidate__c.object-meta.xml
<CustomObject>
    <label>Candidate</label>
    <nameField>
        <label>Candidate  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>