force-app/main/default/objects/Candidate__c/fields/Currency_CTC__c.field-meta.xml
<CustomField>
    <fullName>Currency_CTC__c</fullName>
    <label>Currency CTC</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>