force-app/main/default/objects/Candidate__c/fields/Current_Desgination__c.field-meta.xml
<CustomField>
    <fullName>Current_Desgination__c</fullName>
    <label>Current Desgination</label>
    <length>50</length>
    <type>Text</type>
</CustomField>