force-app/main/default/objects/Candidate__c/fields/Current_Employee__c.field-meta.xml
<CustomField>
    <fullName>Current_Employee__c</fullName>
    <label>Current Employee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>