force-app/main/default/objects/Candidate__c/fields/Notice_period__c.field-meta.xml
<CustomField>
    <fullName>Notice_period__c</fullName>
    <label>Notice period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>! week</fullName>
            </value>
            <value>
                <fullName>15 Days</fullName>
            </value>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>