force-app/main/default/objects/Candidate__c/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <label>Passport Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>