force-app/main/default/objects/Candidate__c/fields/position__c.field-meta.xml
<CustomField>
    <fullName>position__c</fullName>
    <label>position</label>
    <referenceTo>position__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>