force-app/main/default/objects/Candidate__c/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <label>Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>B.Com</fullName>
            </value>
            <value>
                <fullName>B.E</fullName>
            </value>
            <value>
                <fullName>B.se</fullName>
            </value>
            <value>
                <fullName>B.Tech</fullName>
            </value>
            <value>
                <fullName>BCA</fullName>
            </value>
            <value>
                <fullName>M/Com</fullName>
            </value>
            <value>
                <fullName>M.sc</fullName>
            </value>
            <value>
                <fullName>M.tech</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>