force-app/main/default/objects/Candidate__c/fields/Technical_Skills__c.field-meta.xml
<CustomField>
    <fullName>Technical_Skills__c</fullName>
    <label>Technical Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>adv java</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Aws</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
            <value>
                <fullName>c++</fullName>
            </value>
            <value>
                <fullName>devops</fullName>
            </value>
            <value>
                <fullName>Dotnet</fullName>
            </value>
            <value>
                <fullName>java</fullName>
            </value>
            <value>
                <fullName>Salesforce CRM</fullName>
            </value>
            <value>
                <fullName>selinium</fullName>
            </value>
            <value>
                <fullName>Visual force</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>