force-app/main/default/objects/Candidate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact_number__c</columns>
    <columns>Current_Desgination__c</columns>
    <columns>Notice_period__c</columns>
    <columns>Location__c</columns>
    <columns>PAN_Number__c</columns>
    <columns>Years_of_experience__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Currency_CTC__c</columns>
    <columns>Candidate_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>